Galima generuoti pdf ataskaita