@@ -76,6 +76,13 @@
                 <scope>system</scope>
                 <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/sign-9.1.0.jar</systemPath>
             </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.2.5</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -86,8 +93,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
